CORS hotfix